samples/_failures_safe/1761723551_e79eba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a142f762.c: In function ‘main’:
./samples/SAFE/__tmp_a142f762.c:151:15: error: expected ‘;’ at end of input
  151 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_a142f762.c:151:9: error: expected declaration or statement at end of input
  151 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_a142f762.c:151:9: error: expected declaration or statement at end of input
